Name:            delicious
Version:         0.1.0
Synopsis:        Accessing the del.icio.us API from Haskell
Description:     Haskell binding to del.icio.us API
category:        Web
License:         BSD3
license-file:    LICENSE
author:          sof@galois.com
maintainer:      sof@galois.com
copyright:       (c) 2008 Galois, Inc.
Build-Depends:   base,
                 xml       >= 1.2.6,
                 feed,
                 webclient >= 0.2
Build-type:      Simple
Ghc-Options:     -Wall
Exposed-Modules: 
  Network.Delicious.Types,
  Network.Delicious.User,
  Network.Delicious.RSS,
  Network.Delicious

Executable: dtest
Main-is: Main.hs
Other-Modules: Network.Delicious
