name:            delicious
version:         0.2.1
homepage:        http://galois.com
synopsis:        Accessing the del.icio.us APIs from Haskell
description:     Access to the del.icio.us social tagging site's API from Haskell.
category:        Web
license:         BSD3
license-file:    LICENSE
author:          sof@galois.com
maintainer:      sof@galois.com
copyright:       (c) 2008 Galois, Inc.
cabal-version:   >= 1.2
build-type:      Simple

library
    exposed-modules: 
      Network.Delicious.Types,
      Network.Delicious.User,
      Network.Delicious.RSS,
      Network.Delicious.JSON,
      Network.Delicious

    build-depends:   base,
                     xml        >= 1.2.6,
                     feed       >= 0.3.1,
                     webclient  >= 0.2,
                     json       >= 0.3.3,
                     nano-md5   >= 0.1.1,
                     bytestring >= 0.9.0.1

    ghc-options:     -Wall

-- Executable:     dtest
-- Main-is:        Main.hs
